# nba-oracle

./: .1password.yml.example  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml
.github/actions/load-secrets/: action.yml
.github/workflows/: build-and-push.yml  cleanup-images.yml  deploy-backend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  settings.py
backend/app/core/: logging.py  security.py
backend/app/models/: schemas.py
backend/app/providers/: __init__.py  balldontlie_provider.py
backend/app/routers/: games.py
backend/app/services/: game_service.py  nba_api.py
docs/: DEPLOYMENT.md  MIGRATION.md  archived-deployment-ec2.md  daily-stats.yml  nba-api-reference.md
docs/archived-terraform/: README.md  deploy-backend.yml
docs/archived-terraform/load-secrets/: action.yml
docs/archived-terraform/terraform/: cloudwatch.tf  prod.tfvars  providers.tf  security_groups.tf  terraform-apply.sh  variables.tf
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-workspace.yaml  vercel.json  vite.config.ts
frontend/api/: [...path].ts  health.ts
frontend/api/games/: today.ts
frontend/src/: App.tsx
frontend/src/api/: games.ts
frontend/src/components/: GameCard.tsx  TodaysGames.tsx
infrastructure/terraform/: README.md  backend.tf  data.tf  ec2.tf  outputs.tf
notebooks/: requirements.txt
scripts/: generate-env.sh  setup-1password.sh
tasks/: env.yml  helpers.yml  infra.yml  prod.yml  secrets.yml
(+5 files in other folders)
